# Diplomado_CAS_CIMAT

./: .gitignore  README.md
Modulo_1_C/: CMakeLists.txt  Ejercicios_C.txt  ejercicio_1  ejercicio_1.c  ejercicio_10.c  ejercicio_11.c  ejercicio_12.c  ejercicio_2  ejercicio_2.c  ejercicio_3.c  ejercicio_4.c  ejercicio_5.c  ejercicio_6.c  ejercicio_7.c  ejercicio_8.c  ejercicio_9.c  ejercicios_punteros.c  hola_mundo.c
Modulo_1_C/ejercicio_1.dSYM/Contents/Resources/DWARF/: ejercicio_1
Modulo_1_C/ejercicio_1.dSYM/Contents/Resources/Relocations/aarch64/: ejercicio_1.yml
Modulo_1_C/ejercicio_2.dSYM/Contents/Resources/DWARF/: ejercicio_2
Modulo_1_C/ejercicio_2.dSYM/Contents/Resources/Relocations/aarch64/: ejercicio_2.yml
